# strawberry-graphene-perf

./: .gitignore  README.md  data.json  gendata.py  manage.py  pyproject.toml
json_serde_exp/: asgi.py  data.py  graphene_api.py  settings.py  strawberry_api.py  urls.py  wsgi.py
src/json_serde_exp/: __init__.py
